new validator and schema classes
